js/js.translator/testData/incremental/invalidation/addMethodToInterfaceWithConsumer/lib1/l1.0.kt
package sample

interface I {
    fun foo(): Int
}
